fixing content shift

--- a/src/index.scss
+++ b/src/index.scss
@@ -268,4 +268,5 @@ main {
 
 .logo-tictactoe {
   width: clamp(150px, 70vw, 400px)!important;
+  aspect-ratio: 400/169.3;
 }
